# elm-pruning

./: .gitignore  LICENSE  README.md  pyproject.toml  runner.ipynb  test_dict.json
elm_prune.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
elmprune/: __init__.py  elm.py  elm_importance_processor.py  feature_extractor.py  filter_ranking.py  importance_processor_config.py  prune_config.py  prune_pipeline.py  prune_processor.py  utils.py
